--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
+    "react-router-dom": "^7.9.6",
     "styled-components": "^5.3.11",
     "tailwindcss": "^4.1.15"
   },
