--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
+    "chart.js": "^4.5.1",
     "eta": "^2.2.0",
     "json-server": "^1.0.0-beta.3",
+    "plotly.js": "^3.3.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
+    "react-plotly.js": "^2.6.0",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.6",
     "styled-components": "^5.3.11",
